--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  google_fonts: ^2.2.0
+  basics: ^0.10.0
+ 
+  
 
 dev_dependencies:
   flutter_test:
@@ -59,7 +63,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  # 
+  assets:
+  - assets/images/dice-5.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
